src/test/deca/context/valid/102_classeExtends.deca
// Description:
//    Programme minimaliste: une classe B extension de la classe A.
//
// Résultats:
//
//
// Historique:
//    cree le 01/01/2022

class A {}
class B extends A {}
