src/test/deca/context/invalid/24_ExtendsNullClass.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 11: ContextualError: undefined super class
// 
// Historique:
//    cree le 01/01/2022

// Doit etre refuse.
class A extends Null {
}
